integration further improved

--- a/tests/integrationTests/CMakeLists.txt
+++ b/tests/integrationTests/CMakeLists.txt
@@ -1,7 +1,9 @@
 find_package(Python COMPONENTS Interpreter REQUIRED)
 find_package(Pytest REQUIRED)
 
-add_test(NAME PythonTest
-    COMMAND Pytest::Pytest ${CMAKE_CURRENT_SOURCE_DIR}/testsets/test.py --executable ${CMAKE_BINARY_DIR}/apps/pimd_qmcf
+set(TEST_NAME cgo_mmmd)
+add_test(NAME ${TEST_NAME}
+    COMMAND
+    Pytest::Pytest ${CMAKE_CURRENT_SOURCE_DIR}/testsets/test_${TEST_NAME}.py --executable ${CMAKE_BINARY_DIR}/apps/pimd_qmcf --name ${TEST_NAME}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
