--- a/tests/integrationTests/CMakeLists.txt
+++ b/tests/integrationTests/CMakeLists.txt
@@ -4,6 +4,10 @@ find_package(Pytest REQUIRED)
 set(TEST_NAME cgo_mmmd)
 add_test(NAME ${TEST_NAME}
     COMMAND
-    Pytest::Pytest ${CMAKE_CURRENT_SOURCE_DIR}/testsets/test_${TEST_NAME}.py --executable ${CMAKE_BINARY_DIR}/apps/pimd_qmcf --name ${TEST_NAME}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    Pytest::Pytest
+    ${CMAKE_CURRENT_SOURCE_DIR}/testsets/test_${TEST_NAME}.py
+    --executable ${CMAKE_BINARY_DIR}/apps/pimd_qmcf
+    --name ${TEST_NAME}
+    WORKING_DIRECTORY
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
